@@ -32,7 +32,7 @@ POSSIBILITY OF SUCH DAMAGE.
 
 import os, sys
 
-VERSION="1.6.2"
+VERSION="1.6.3"
 REVISION="x"
 INSTALL="x"
 C1='x'
